# lite-atoms-dev

./: .dockerignore  .env.example  .gitignore  .wiki.md  AGENTS.md  README.md
app/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/backend/skills_docs/: supabase_code_requirements.md
app/backend/src/lite_atoms/: __init__.py  settings.py
app/backend/src/lite_atoms/agents/: __init__.py  builder.py  errors.py  model.py  planner.py  service.py  titles.py
app/backend/src/lite_atoms/api/: main.py  schemas.py
app/backend/src/lite_atoms/application/: repository.py  version_files.py
app/backend/src/lite_atoms/execution/: __init__.py  build_runner.py  validator.py  worktree.py
app/backend/src/lite_atoms/infrastructure/: db.py
app/backend/src/lite_atoms/preview_gateway/: __init__.py  main.py
app/backend/src/lite_atoms/security/: auth.py  preview_ticket.py
app/backend/src/lite_atoms/worker/: __init__.py  main.py
app/backend/tests/: conftest.py  test_auth.py  test_generation_flow.py  test_plan_mode.py  test_planner.py  test_validator.py  test_version_files.py
app/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
contracts/build-contract/: v1.schema.json
contracts/sse/: v1.schema.json
docs/: 1-PRD.md  2-设计文档.md  3-运行时与数据设计.md  4-目录与前端模块设计.md  5-实现说明与扩展计划.md
infra/: compose.local.yml
infra/build-runner/: Dockerfile
infra/local-db-init/: 00_shim.sql  02_local.sql
infra/preview-gateway/: Dockerfile  nginx.conf
scripts/: verify-local.sh
templates/react-vite-tailwind/: package.json  (+2 more)
(+54 files in other folders)
