[project]
name = "lite-atoms-backend"
version = "0.1.0"
description = "API and worker for Lite Atoms Dev"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.1.0",
  "docker>=7.1.0",
  "dulwich>=0.22.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain-openai>=0.2.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
